[package]
name = "minimal_web_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde_urlencoded = "0.7.1"
tokio = { version = "1", features = ["full"] }